[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Paddles" type="Node2D" parent="."]

[node name="RedPaddle" parent="Paddles" instance=ExtResource( 2 )]

[node name="GreenPaddle" parent="Paddles" instance=ExtResource( 2 )]

[node name="BluePaddle" parent="Paddles" instance=ExtResource( 2 )]

[node name="EventSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Events" type="Node2D" parent="."]
[connection signal="timeout" from="EventSpawnTimer" to="." method="_on_EventSpawnTimer_timeout"]
